# SentinelPass

./: .prettierrc  index.html  package-lock.json  package.json  reactuse.json  tsconfig.json  tsconfig.node.json  vite.config.ts
src/: main.tsx  routing.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/async/commands/: category_cmd.rs  db_store_cmd.rs  icon_cmd.rs  password_generator_cmd.rs
src-tauri/src/async/db/: db_manager_async.rs  mod.rs
src-tauri/src/async/service/: category_service.rs  password_service.rs
src-tauri/src/async/states/: db_async_state.rs
src-tauri/src/commands/: category_cmd.rs  db_store_cmd.rs  mod.rs  password_generator_cmd.rs  storege_cmd.rs  test.rs
src-tauri/src/db/: db_manager.rs  mod.rs
src-tauri/src/db/models/: category.rs  mod.rs  password.rs  password_storage.rs  tag.rs
src-tauri/src/dto/: category_dto.rs  db_store_dto.rs  mod.rs  password_dto.rs  tag_dto.rs
src-tauri/src/service/: category_service.rs  mod.rs  tag_service.rs
src-tauri/src/services/: category_service.rs  mod.rs
src-tauri/src/states/: db_state.rs  main_state.rs  mod.rs
src-tauri/src/utils/: cmd_result.rs  icon_convert.rs  mod.rs  password_generator.rs  window_size.rs
src-tauri/tokio_sqlcipher/: Cargo.toml
src-tauri/tokio_sqlcipher/src/: lib.rs
src/components/: Logo.tsx  ThemeToggle.tsx  index.ts
src/configs/: dashboard.ts  index.ts  invoke-commands.ts  main.ts  paths.ts  theme.ts
src/hooks/: index.ts  useMediaQuery.ts  useWindowResize.ts
src/hooks/lib/: index.ts
src/hooks/lib/useClickOutside/: useClickOutside.ts
src/hooks/lib/useHover/: useHover.ts
src/hooks/store/: useDashboard.tsx
src/layouts/: AnimationScreen.tsx  AnimationSizeBox.tsx  HomeLayout.tsx  MainLayout.tsx  MotionMuiBox.tsx  index.ts
src/layouts/DashboardLayout/: DashboardContent.tsx  DashboardRenderer.tsx  index.tsx
src/modules/: index.ts
src/modules/AppBar/: index.tsx
src/modules/CategoryModal/: form.schema.ts  index.tsx
src/modules/CreatePasswordStorageForm/: form.schema.ts  index.tsx  type.ts
src/modules/DashboardList/: index.tsx
src/modules/DashboardList/modules/Header/: HeaderMenu.tsx  index.tsx
src/modules/DashboardSidebar/: index.tsx
src/modules/DashboardSidebar/components/: CategoryList.tsx  DashboardSidebarDrawer.tsx  DashboardSidebarToggleButton.tsx  ListItem.tsx  MainSection.tsx  SelectStorageMode.tsx  SidebarContent.tsx  TagsList.tsx  index.ts
src/modules/DashboardViewing/: index.tsx
src/modules/DashboardViewing/components/: BaseViewingSection.tsx  NotOperation.tsx
src/modules/OpenPasswordStorageForm/: form.schema.ts  index.tsx  type.ts
src/modules/PasswordGeneratorForm/: index.tsx  type.ts
src/modules/TagModal/: form.schema.ts  index.tsx
src/providers/: WindowResizeProvider.tsx  index.tsx  theme-providers.tsx  toasts-provider.tsx
src/screens/: DashboardScreen.tsx  DashboardViewingScreen.tsx  HomeScreen.tsx  PasswordGeneratorScreen.tsx  PasswordStorageScreen.tsx  TestScreen.tsx  index.ts
src/store/: index.tsx  useDashboard.tsx
src/types/: category.ts  index.ts  password-card.ts
src/ui/: DashboardPaper.tsx  ModTextField.tsx  ScrollYBox.tsx  SegmentedControl.tsx  index.ts
src/utils/: index.ts
src/utils/lib/: index.ts
(+5 files in other folders)
