[package]
name = "sentinel-pass"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sentinel_pass_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"
tauri-plugin-stronghold = "2"
rusqlite = { version = "0.34.0", features = [
	"bundled-sqlcipher",
	"chrono",
	"blob",
	"serde_json",
	"uuid"
] }
tokio = { version = "1.44.1", features = ["full"] }
chrono = "0.4.40"
rand = "0.9.0"
uuid = { version = "1.16.0", features = ["v4"] }
thiserror = "2.0.12"
