[package]
name = "sentinel-pass"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[workspace]
members = [
    "./",
    "tokio_sqlcipher"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sentinel_pass_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.0", features = [] }
tauri-plugin-opener = "2.2.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tauri-plugin-clipboard-manager = "2.2.2"
tauri-plugin-dialog = "2.2.1"
tauri-plugin-fs = "2.2.1"
tauri-plugin-log = "2.4.0"
tauri-plugin-notification = "2.2.2"
tauri-plugin-process = "2.2.1"
tauri-plugin-store = "2.2.0"
tauri-plugin-stronghold = "2.2.0"
rusqlite = { version = "0.35.0", features = [
	"bundled-sqlcipher",
	"chrono",
	"blob",
	"serde_json",
	"uuid"
] }
tokio = { version = "1.44.2", features = ["full"] }
chrono = "0.4.40"
base64 = "0.22.1"
rand = "0.9.1"
anyhow = "1.0.98"
uuid = { version = "1.16.0", features = ["v4"] }
thiserror = "2.0.12"
tokio_sqlcipher = { path = "./tokio_sqlcipher" }
